# Trinkets

./: .gitignore  README.org  README.txt  doc.texinfo
Cpp/: .gitignore
Cpp/Test/: Test.h  doc.texinfo
Cpp/Tracing/: CMakeLists.txt  Tracing.c  Tracing.h
Cpp/Tracing/Tests/: Basic.c
Cpp/Unicode/: CMakeLists.txt  Codepoints.cpp  Unicode.cpp  Unicode.h
Cpp/Unicode/Tests/: Basic.cpp
Odin/trinkets/store/: store.odin
Odin/trinkets/tracing/: tracing.odin
